started working on clip-path shapes. looking for ways to keep seperate shapes aligned

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -16,8 +16,10 @@
     <a>With a corncob pipe and a button nose</a>
     <a>And two eyes made out of coal</a>
   </nav>
+  
 
   <div id='myCircle'></div>
+  <div id='myCircle2'></div>
 
   </body>
 </html>
