started working on animating the snowmans mouth and face

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -13,6 +13,8 @@
         <button data-remove='blue-eyes'>Black eyes</button>
         <button data-add='sad'>sad</button>
         <button data-remove='sad'>Happy</button>
+        <button data-add='move-sround'>Move Around</button>
+        <button data-remove='move-around'>Sit Still</button>
       </div>
     </div>
     <div class='container'>
